# net-latency-lab

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  config.yaml  config_debug.yaml  config_local.yaml  main.py  requirements.txt  run_lab.sh  test.py
.cache/clangd/index/: log.hpp.9287317DD9322140.idx  packet.hpp.129202C862D956C9.idx  receiver.cpp.3EBB20F88D200552.idx  sender.cpp.90C7B7D6849BC606.idx  time.hpp.5B7FA685A402D6BB.idx
analysis/: analyze.py  bin_to_csv.py  data.csv  generate_summary.py  latency_utils.py  output_readable.csv  plot_full_metrics.py  plot_paper_figs.py  receiver_delay.py
scripts/: restore_env.sh  run_experiment.sh  run_local.sh  run_remote.sh  setup_env.sh  sync_clocks.sh
src/common/: csv_writer.hpp  log.hpp  packet.hpp  spsc_queue.hpp  thread_utils.hpp  time.hpp
src/receiver/: CMakeLists.txt  pipeline.cpp  receiver.cpp  receiver_baseline.cpp  receiver_threaded.cpp
src/sender/: CMakeLists.txt  sender.cpp
